--- a/_site_production/index.html
+++ b/_site_production/index.html
@@ -7,16 +7,16 @@
   <!-- Stylesheets
   ============================================= -->
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400italic,600,700|Raleway:300,400,500,600,700|Crete+Round:400italic" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" href="https://www.kwmassage.com/css/bootstrap.css" type="text/css" />
-  <link rel="stylesheet" href="https://www.kwmassage.com/style.css" type="text/css" />
-  <link rel="stylesheet" href="https://www.kwmassage.com/css/dark.css" type="text/css" />
-  <link rel="stylesheet" href="https://www.kwmassage.com/css/font-icons.css" type="text/css" />
-  <link rel="stylesheet" href="https://www.kwmassage.com/css/animate.css" type="text/css" />
-  <link rel="stylesheet" href="https://www.kwmassage.com/css/magnific-popup.css" type="text/css" />
-  <link rel="stylesheet" href="https://www.kwmassage.com/css/responsive.css" type="text/css" />
-  <link rel="stylesheet" href="https://www.kwmassage.com/css/colors.css" type="text/css" />
-  <link rel="stylesheet" href="https://www.kwmassage.com/css/travel.css" type="text/css" />
-  <link rel="stylesheet" href="https://www.kwmassage.com/css/ie10_no_paralax.css" type="text/css" />
+  <link rel="stylesheet" href="http://localhost:4000/css/bootstrap.css" type="text/css" />
+  <link rel="stylesheet" href="http://localhost:4000/style.css" type="text/css" />
+  <link rel="stylesheet" href="http://localhost:4000/css/dark.css" type="text/css" />
+  <link rel="stylesheet" href="http://localhost:4000/css/font-icons.css" type="text/css" />
+  <link rel="stylesheet" href="http://localhost:4000/css/animate.css" type="text/css" />
+  <link rel="stylesheet" href="http://localhost:4000/css/magnific-popup.css" type="text/css" />
+  <link rel="stylesheet" href="http://localhost:4000/css/responsive.css" type="text/css" />
+  <link rel="stylesheet" href="http://localhost:4000/css/colors.css" type="text/css" />
+  <link rel="stylesheet" href="http://localhost:4000/css/travel.css" type="text/css" />
+  <link rel="stylesheet" href="http://localhost:4000/css/ie10_no_paralax.css" type="text/css" />
 
 
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -24,13 +24,13 @@
     <script src="https://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
   <![endif]-->
   <!--[if IE]>
-    <link rel="stylesheet" href="https://www.kwmassage.com/css/ie_no_paralax.css" type="text/css" />
+    <link rel="stylesheet" href="http://localhost:4000/css/ie_no_paralax.css" type="text/css" />
   <![endif]-->
 
 <!-- External JavaScripts
 ============================================= -->
-<script type="text/javascript" src="https://www.kwmassage.com/js/jquery.js"></script>
-<script type="text/javascript" src="https://www.kwmassage.com/js/plugins.js"></script>
+<script type="text/javascript" src="http://localhost:4000/js/jquery.js"></script>
+<script type="text/javascript" src="http://localhost:4000/js/plugins.js"></script>
  
 
   <!-- Document Title
@@ -44,7 +44,7 @@
   <meta name="author" content="Jeremy Bissonnette, Registered Massage Therapist" >
   <link rel="icon" 
       type="image/png" 
-      href="https://www.kwmassage.com/assets/images/logo_kitchener_massage.png">
+      href="http://localhost:4000/assets/images/logo_kitchener_massage.png">
  
 </head>
 
@@ -76,7 +76,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <!-- Logo
       ============================================= -->
       <div id="logo">
-        <a href="https://www.kwmassage.com/index.html" title="Kitchener Massage Therapy Home Page" class="standard-logo" data-dark-logo="https://www.kwmassage.com/assets/images/logo_kitchener_massage.png"><img src="https://www.kwmassage.com/assets/images/logo_kitchener_massage.png" alt="Kitchener Massage Therapist, logo"></a>
+        <a href="http://localhost:4000/index.html" title="Kitchener Massage Therapy Home Page" class="standard-logo" data-dark-logo="http://localhost:4000/assets/images/logo_kitchener_massage.png"><img src="http://localhost:4000/assets/images/logo_kitchener_massage.png" alt="Kitchener Massage Therapist, logo"></a>
       </div>
       <!-- #logo end -->
 
@@ -86,26 +86,26 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <nav id="primary-menu" class="style-6">
 
   <ul dir="rtl" class="one-page-menu" >
-    <li><a href="https://www.kwmassage.com/index.html"><div>Home</div></a></li>
-    <li><a href="https://www.kwmassage.com/about/index.html" title="Jeremy's bio and massage therapy background"><div>About</div></a>
+    <li><a href="http://localhost:4000/index.html"><div>Home</div></a></li>
+    <li><a href="http://localhost:4000/about/index.html" title="Jeremy's bio and massage therapy background"><div>About</div></a>
       <ul>
-        <li><a href="https://www.kwmassage.com/about/testimonials/index.html"><div>Testimonials</div></a></li>
-        <li><a href="https://www.kwmassage.com/about/rock-climbing-as-a-lifestyle/index.html"><div>Rock Climbing as a Lifestyle</div></a></li>
+        <li><a href="http://localhost:4000/about/testimonials/index.html"><div>Testimonials</div></a></li>
+        <li><a href="http://localhost:4000/about/rock-climbing-as-a-lifestyle/index.html"><div>Rock Climbing as a Lifestyle</div></a></li>
       </ul>
     </li>
-    <li><a href="https://www.kwmassage.com/clinic-information/index.html" title="Book Massage Therapy Appointment Online Now"><div>Appointments</div></a>
+    <li><a href="http://localhost:4000/clinic-information/index.html" title="Book Massage Therapy Appointment Online Now"><div>Appointments</div></a>
       <ul>
-        <li><a href="https://www.kwmassage.com/clinic-information/clinic/index.html"><div>Clinic</div></a></li>
-        <li><a href="https://www.kwmassage.com/clinic-information/note-to-new-massage-therapy-clients/index.html"><div>Note to New Clients</div></a></li>
+        <li><a href="http://localhost:4000/clinic-information/clinic/index.html"><div>Clinic</div></a></li>
+        <li><a href="http://localhost:4000/clinic-information/note-to-new-massage-therapy-clients/index.html"><div>Note to New Clients</div></a></li>
       </ul>
     </li>
-    <li><a href="https://www.kwmassage.com/contact/index.html"><div>Contact</div></a></li>
-    <li><a href="https://www.kwmassage.com/knowledge-centre/index.html" title="More articals about Registered Massage Therapy"><div>Knowledge Centre</div></a>
+    <li><a href="http://localhost:4000/contact/index.html"><div>Contact</div></a></li>
+    <li><a href="http://localhost:4000/knowledge-centre/index.html" title="More articals about Registered Massage Therapy"><div>Knowledge Centre</div></a>
       <ul>
-        <li><a href="https://www.kwmassage.com/knowledge-centre/facts-about-registered-massage-therapy-in-ontario/index.html"><div>Facts</div></a></li>
-        <li><a href="https://www.kwmassage.com/knowledge-centre/general-massage-therapy/index.html"><div>General Massage Therapy</div></a></li>
-        <li><a href="https://www.kwmassage.com/knowledge-centre/stretching/index.html"><div>Stretching</div></a></li>
-        <li><a href="https://www.kwmassage.com/knowledge-centre/rock-climbing/index.html"><div>Rock Climbing</div></a></li>
+        <li><a href="http://localhost:4000/knowledge-centre/facts-about-registered-massage-therapy-in-ontario/index.html"><div>Facts</div></a></li>
+        <li><a href="http://localhost:4000/knowledge-centre/general-massage-therapy/index.html"><div>General Massage Therapy</div></a></li>
+        <li><a href="http://localhost:4000/knowledge-centre/stretching/index.html"><div>Stretching</div></a></li>
+        <li><a href="http://localhost:4000/knowledge-centre/rock-climbing/index.html"><div>Rock Climbing</div></a></li>
       </ul>
     </li>
   </ul>
@@ -123,7 +123,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 //     autoResize: false
 // }); 
 </script>
-<section id="slider" class="slider-parallax swiper-wrapper full-screen clearfix" style="background: url('https://www.kwmassage.com/assets/images/bg_body_mountain.jpg') center; backgroung-repeat: no-repeat; overflow: visible; background-size: cover; width: 101%;" data-height-lg="650" data-height-md="550" data-height-sm="550" data-height-xs="550" data-height-xxs="550">
+<section id="slider" class="slider-parallax swiper-wrapper full-screen clearfix" style="background: url('http://localhost:4000/assets/images/bg_body_mountain.jpg') center; backgroung-repeat: no-repeat; overflow: visible; background-size: cover; width: 101%;" data-height-lg="650" data-height-md="550" data-height-sm="550" data-height-xs="550" data-height-xxs="550">
   <div class="swiper-container">
     <div class="swiper-wrapper">
 
@@ -133,7 +133,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <!-- Picture -->
         <div style="top: 0px !important" class="slider-caption leftmargin-lg notopmargin hidden-sm hidden-xs hidden-xxs">
           <a href="https://www.youtube.com/watch?v=XSRrvEXZSdk" data-lightbox="iframe">
-            <img alt="Welcome video; Jeremy Bissonnette, Kitchner Massage Therapist" src="https://www.kwmassage.com/assets/images/picture_kitchener_massage_therapist.png">
+            <img alt="Welcome video; Jeremy Bissonnette, Kitchner Massage Therapist" src="http://localhost:4000/assets/images/picture_kitchener_massage_therapist.png">
           </a>
         </div>
         <!-- Picture -->
@@ -172,7 +172,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
       <div class="tab-content clearfix center hidden-lg hidden-md" id="tab-picture">          
         <a href="https://www.youtube.com/watch?v=XSRrvEXZSdk" data-lightbox="iframe">
-          <img class="center" src="https://www.kwmassage.com/assets/images/picture_kitchener_massage_therapist.png" alt="Kitchener Massage Therapist, Picture">
+          <img class="center" src="http://localhost:4000/assets/images/picture_kitchener_massage_therapist.png" alt="Kitchener Massage Therapist, Picture">
         </a>
       </div>
 
@@ -311,7 +311,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- Picture -->
 <div class="center notopmargin bottommargin hidden-lg hidden-md hidden-sm">
   <a href="https://www.youtube.com/watch?v=XSRrvEXZSdk" data-lightbox="iframe">
-    <img src="https://www.kwmassage.com/assets/images/picture_kitchener_massage_therapist.png" alt="Jeremy Bissonnette, Registered Massage Therapist">
+    <img src="http://localhost:4000/assets/images/picture_kitchener_massage_therapist.png" alt="Jeremy Bissonnette, Registered Massage Therapist">
   </a>
 </div>
 <!-- Picture -->
@@ -419,13 +419,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="col_one_third">
       <div class="feature-box fbox-border fbox-effect">
         <div class="fbox-icon">
-          <a href="/generalmassagetherapy/what-can-deep-tissue-massage-treat/index.html"><i><img src="https://www.kwmassage.com/assets/images/back_pain_icon.png" alt="Back Pain icon"></i></a>
+          <a href="/generalmassagetherapy/what-can-deep-tissue-massage-treat/index.html"><i><img src="http://localhost:4000/assets/images/back_pain_icon.png" alt="Back Pain icon"></i></a>
         </div>
         <h3>Back Pain</h3>
         <ul class="iconlist iconlist-color nobottommargin">
-          <li><i class="icon-caret-right"></i> <a href="https://www.kwmassage.com/generalmassagetherapy/degenerative_disc_disease/index.html">Degenerative disc disease</a></li>
+          <li><i class="icon-caret-right"></i> <a href="http://localhost:4000/generalmassagetherapy/degenerative_disc_disease/index.html">Degenerative disc disease</a></li>
           <li><i class="icon-caret-right"></i> Herniated Disc</li>
-          <li><i class="icon-caret-right"></i> <a href="https://www.kwmassage.com/generalmassagetherapy/low-back-pain/index.html">Low Back pain</a></li>
+          <li><i class="icon-caret-right"></i> <a href="http://localhost:4000/generalmassagetherapy/low-back-pain/index.html">Low Back pain</a></li>
           <li><i class="icon-caret-right"></i> Postural Disorders</li>
         </ul>
       </div>
@@ -455,7 +455,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <ul class="iconlist iconlist-color nobottommargin">
           <li><i class="icon-caret-right"></i> Arthritis</li>
           <li><i class="icon-caret-right"></i> Carpal Tunnel Syndrome</li>
-          <li><i class="icon-caret-right"></i> <a href="https://www.kwmassage.com/generalmassagetherapy/tension-headaches-3/index.html">Headache/Migraine</a></li>
+          <li><i class="icon-caret-right"></i> <a href="http://localhost:4000/generalmassagetherapy/tension-headaches-3/index.html">Headache/Migraine</a></li>
           <li><i class="icon-caret-right"></i> Neck pain</li>
         </ul>
       </div>
@@ -519,7 +519,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </section>
 <!-- #content end -->
       <div style="width: 101%"><!-- <footer id="footer" class="dark"> -->
-<footer id="footer" class="dark" style="background: url('https://www.kwmassage.com/images/footer-bg.jpg'); background-size: 100% 100%;">
+<footer id="footer" class="dark" style="background: url('http://localhost:4000/images/footer-bg.jpg'); background-size: 100% 100%;">
     <div class="container clearfix">
         <div class="footer-widgets-wrap">
 
@@ -574,7 +574,7 @@ to revert back to php mailer incert: /include/footercontact.php in the form acti
             <div class="col_two_third col_last">
                 <div class="widget clearfix">
                     
-                    <img src="https://www.kwmassage.com/assets/images/Kitchener_massage_logo.png" alt="Kitchener Registered Masage Therapist Logo Large" class="alignleft" style="margin-top: 8px; padding-right: 18px; border-right: 1px solid #4A4A4A;">
+                    <img src="http://localhost:4000/assets/images/Kitchener_massage_logo.png" alt="Kitchener Registered Masage Therapist Logo Large" class="alignleft" style="margin-top: 8px; padding-right: 18px; border-right: 1px solid #4A4A4A;">
                     <div class="line" style="margin: 30px 0;"></div>               
                     
                     <div class="col_one_third">
@@ -611,7 +611,7 @@ to revert back to php mailer incert: /include/footercontact.php in the form acti
         <div class="container clearfix">
             <div class="col_full nobottommargin center">
                 <div class="copyrights-menu copyright-links clearfix">
-                    <a href="https://www.kwmassage.com/index.html">Home</a>/<a href="https://www.kwmassage.com/about/index.html">About</a>/<a href="https://www.kwmassage.com/clinic-information/index.html">Appointments</a>/<a href="https://www.kwmassage.com/contact/index.html">Contact</a>/<a href="https://www.kwmassage.com/knowledge-centre/index.html">Knowledge Center</a>
+                    <a href="http://localhost:4000/index.html">Home</a>/<a href="http://localhost:4000/about/index.html">About</a>/<a href="http://localhost:4000/clinic-information/index.html">Appointments</a>/<a href="http://localhost:4000/contact/index.html">Contact</a>/<a href="http://localhost:4000/knowledge-centre/index.html">Knowledge Center</a>
                 </div>
                 Copyrights &copy; 2015 All Rights Reserved by <strong>KWmassage</strong>
             </div>
@@ -625,7 +625,7 @@ to revert back to php mailer incert: /include/footercontact.php in the form acti
     </div>
     <!-- Footer Scripts
     ============================================= -->
-    <script type="text/javascript" src="https://www.kwmassage.com/js/functions.js"></script>
+    <script type="text/javascript" src="http://localhost:4000/js/functions.js"></script>
 
   </body>
 </html>
