--- a/_site_production/generalmassagetherapy/officedog/index.html
+++ b/_site_production/generalmassagetherapy/officedog/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<head>
+  <head>
 
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
@@ -35,12 +35,13 @@
 
   <!-- Document Title
   ============================================= -->
-  <title>KWmassage | Rock Climbing as a Lifestyle </title>
+  <title>KWmassage | Maizey The Office DOg</title>
   
   <!-- Meta Tags
   ============================================= -->
-  <meta name="description" content="Rock Climbing and how it plays a role into the life of a father, husband and massage therapist.">
-  <meta name="keywords" content="Kitchener massage therapy, Kitchener massage therapist, massage therapist Kitchener , massage therapy Kitchener, Kitchener registered massage therapy, Kitchener registered massage therapist, registered massage therapist Kitchener , registered massage therapy Kitchener, Deep tissue massage, massage, sports massage, Kitchener sports massage, massage therapy, massage therapist, registered massage therapist, registered massage therapy, Climbing, climbing injury, rock climbing">
+  <meta name="description" content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.
+">
+  <meta name="keywords" content="">
   <meta name="author" content="Jeremy Bissonnette, Registered Massage Therapist" >
   <link rel="icon" 
       type="image/png" 
@@ -49,8 +50,8 @@
 </head>
 
 
-<body class="stretched">
-
+  <body class="stretched">
+  
 <!-- Google Tag Manager -->
 <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-PNLFQ7"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -60,12 +61,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-PNLFQ7');</script>
 <!-- End Google Tag Manager -->
-
+  
   <!-- Document Wrapper
-  ============================================= -->
-  <div id="wrapper" class="clearfix">
+    ============================================= -->
+    <div id="wrapper" class="clearfix">
 
-    <!-- Header
+      <!-- Header
 ============================================= -->
 <header id="header" class="" data-sticky-class="not-dark" data-responsive-class="not-dark" data-class-lg="header_background" data-class-md="header_background">
   <div id="header-wrap" class="">
@@ -124,24 +125,23 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
       <div class="container clearfix">
         <h1>Kitchener Massage Therapy</h1>
-        <span>Rock Climbing as a Lifestyle </span>
+        <span>Maizey The Office DOg</span>
         <ol class="breadcrumb">
           <li><a href="http://localhost:4000/index.html">Home</a></li>
-          <li><a href="http://localhost:4000/about/index.html">about</a></li>
-          <li class="active">Rock Climbing as a Lifestyle </li>
+          <li><a href="http://localhost:4000/generalmassagetherapy/index.html">generalmassagetherapy</a></li>
+          <li class="active">Maizey The Office DOg</li>
         </ol>
       </div>
 
     </section><!-- #page-title end -->
 
-
+  
+      
     <!-- Page Title and content
     ============================================= -->
-    <section id="page-title" class="page-title-parallax notoppadding" style="background-repeat: no-repeat; background-color: white;" data-class-lg="lg-bg-image" data-class-md="lg-bg-image" data-class-sm="lg-bg-image" data-class-xs="lg-bg-image" data-class-xxs="sm-bg-image">
-
-      <div id="turn_background_white" class="content-wrap">
+    <section id="page-title" class="page-title-parallax notoppadding nobottompadding" style="background-repeat: no-repeat; " data-class-lg="lg-bg-image" data-class-md="lg-bg-image" data-class-sm="lg-bg-image" data-class-xs="lg-bg-image" data-class-xxs="sm-bg-image">
+      <div style="background-color:white;" class="content-wrap">
         <div class="container clearfix notopmargin">
-
 
           <!-- Right Col -->
           <div class="postcontent nobottommargin col_last clearfix">
@@ -149,21 +149,28 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <div class="entry clearfix">
                 <div class="entry-content notopmargin">
 
-                  <p>I started rock climbing in 1997 when I was 21 years old. I started <a href="http://grandriverrocks.com/">climbing in the gym </a>before I ventured outside top-roping and sport climbing a year later. Now I’m a dad, a husband, and a <a href="http://localhost:4000/index.html">massage therapist, </a>but I still love to climb and I plan to climb for the rest of my life.</p>
+                  <p><img class="fleft rightmargin-sm leftmargin-sm" width="191" height="169" alt="Maizey1" src="http://localhost:4000/assets/images/maizey1.jpg" /></p>
 
-<p>My step-brother introduced me to gym climbing when I was 21 and I fell in love right away. It was like I had finally found the answer to the meaning of my life. As I started venturing outside top-roping then sport climbing, everything else in my life started to fade away. I slowly phased out my mountain biking and quit karate and ju-jitsu. I brought <a href="http://localhost:4000/about/index.html">yoga</a> into my life a few years later, only because a friend and climbing partner suggested that it would help improve my climbing. I have had to take time off from my climbing; moving around, <a href="http://localhost:4000/rock_climbing/rock-climbers-and-our-fingers/index.html">injuries</a>, <a href="http://localhost:4000/knowledge-centre/facts-about-registered-massage-therapy-in-ontario/index.html">massage therapy school, </a>and babies have all taken me away from climbing for periods of time, but I have always come back to it.</p>
+<p>Maizey is a 5 month old puppy(as of February 2020). We adopted her as a family pet and office dog, December of 2019. She is very adorable, very well behaved for her age and a gentle soul. </p>
 
-<p>Now that <a href="http://localhost:4000/about/index.html">I’m a family man, </a>my climbing focus has changed. I spend a lot of time teaching my children to climb, and I help and encourage my wife to improve her climbing skills and experience. I take the whole family up multi-pitch trad climbs and we do day trips up to Rattle Snake Point to top-rope. My youngest daughter was four when we did our first family trip up to <a href="https://www.alpineclubofcanada.ca/web/ACCMember/Huts/Bon_Echo_Hut.aspx">Bon Echo National park</a>, a 300 foot multi-pitch trad climb craig.</p>
+<p>Maizey was adopted as a rescue from the Island of Bahamas. After hurricane Dorian(August 28th, 2019) many of the island dogs were rescued by an animal shelter, <a href="http://www.potcakeplace.com/" title="potcake place">The PotCake Place</a>. When Maizey was found on the streets she was malnourished, completely bald and had rickets. After being nursed back to health she was vaccinated, put on an airplane to canada then eventually landed in my family's home. Despite her early hardships she is a loving and kind puppy. Though she is still a little timid, which we are helping her work through. 
+</p>
 
-<p>I do get out climbing without my family as well. I <a href="http://localhost:4000/generalmassagetherapy/aerobic-vs-anaerobic-training-for-rock-climbing/index.html">train once or twice a week </a>at <a href="http://grandriverrocks.com/">Grand River Rock</a>, and I get out to Mount Nemo a few times a year. I’ve been up to Bon Echo a handful of times. When I’m climbing with my family, I’m patient, encouraging, and methodical. When I’m out with the boys we like to climb hard and push our limits.</p>
+<p><img class="fright rightmargin-sm leftmargin-sm" width="321" height="138" alt="Maizey2" src="http://localhost:4000/assets/images/maizey2.jpg" /></p>
 
-<p>My training as a <a href="http://localhost:4000/clinic-information/index.html">massage therapist </a>has been a great help to my climbing. When I injure myself, I know what to do to get myself back climbing as quick as possible. I know right away if I should use heat or ice, when to stretch, or rest, or just push through. It used to take me a week or more to get a solid answer about how to handle an injury, now I start with the right course of treatment right away. Even more importantly, I know what to do to stay healthy and reduce the risk of injuring myself. <a href="http://localhost:4000/knowledge-centre/stretching/index.html">Proper stretching</a>, training supporting muscles, better posture, proper rest periods, and hydrotherapy all keep me strong, flexible, and limber to me keep climbing and training hard.</p>
+<p>One of my hope’s for Maizey is for her to be a massage therapy room office dog and spend some of her day by the fireplace like our old cat Elliott would before he passed away. She is also being crate trained so that when the therapy room isn't an option for her she can be upstairs safely by herself. Her training is coming along very well but she is still young and I can’t expect perfect behaviour yet. </p>
 
-<p>I find that my <a href="http://localhost:4000/clinic-information/note-to-new-massage-therapy-clients/index.html">massage therapy clients </a>who also rock climb gain specific benefits. Not only have I experienced many of the injuries a climber would come in and seek treatment for, but I have also done the research for my own climbing injuries so I’m up to date regarding the latest medical treatment options and techniques.</p>
+<p><img class="fright rightmargin-sm leftmargin-sm" width="403" height="190" alt="Maizey3" src="http://localhost:4000/assets/images/maizey3.jpg" /></p>
 
-<p>I also know the lingo. I know what a crimp is, I know what a jug is and I know the dynamics of a layback and roof climbing. Communicating the specifics of an injury is often difficult between a client and their therapist. Trying to describe a climbing injury to a hockey player is like speaking a different language, and vice versa. I have experience with many different clients with many different injuries related to many different sports and professions but it’s the climbers that I know understand the best.</p>
+<p>I find her to be surprisingly smart, she is learning all the basic commands quickly, as well as many tricks. She has completed her level one obedience training and is scheduled for level two next month. We hope to complete level four eventually and then apply for therapy dog status. At the moment she is being taught to greet people nicely at the front door. Door greeting is coming along nicely but one thing everyone can help me with now is to turn your back to her if she jumps up on you as you come in the door, once she sits nicely you can greet her in anyway you like. </p>
 
-<p>Climbing has been part of my life for a long time. It has permeated the rest of my life, family, and work. I might not be the best climber but I have a good amount of experience and have a lot of fun with it. I hope to continue growing my climbing experience, and I hope to share my knowledge by helping as many people as I can with their own climbing.</p>
+<p><img class="fleft rightmargin-sm leftmargin-sm" width="184" height="176" alt="Maizey4" src="http://localhost:4000/assets/images/maizey4.jpg" /></p>
+
+<p>I want everyone know Maizey will be here in case you have allergies to dogs. Also if you have a fear, dislike or phobia of dogs please let me know before any upcoming massage appointments and I will make sure she is nestled upstairs in her kennel safely before you get here, I will completely understand.</p>
+
+<p>If you have any questions or concerns Please let me know. Otherwise Maizey and I will look forward to seeing you soon.</p>
+
+
 
                 </div>
               </div>
@@ -173,8 +180,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
           <!-- Sidebar
           ============================================= -->
-          <div class="sidebar nobottommargin clearfix" data-class-sm="noleftpadding">
-            <div class="sidebar-widgets-wrap slider-caption-bg slider-caption-bg-light" data-class-lg="" data-class-md="" data-class-sm="sidebar_sm" data-class-xs="" data-class-xxs="">
+          <div class="sidebar nobottommargin clearfix">
+            <div class="sidebar-widgets-wrap slider-caption-bg slider-caption-bg-light">
 
               <div class="widget clearfix">
                 
@@ -248,7 +255,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </div>
           </div>
           <!-- .sidebar end -->
-
 
         </div>
       </div>
@@ -361,10 +367,10 @@ to revert back to php mailer incert: /include/footercontact.php in the form acti
 
 
     <!-- Footer end -->
-  </div>
-  <!-- Footer Scripts
-  ============================================= -->
-  <script type="text/javascript" src="http://localhost:4000/js/functions.js"></script>
+    </div>
+    <!-- Footer Scripts
+    ============================================= -->
+    <script type="text/javascript" src="http://localhost:4000/js/functions.js"></script>
 
-</body>
+  </body>
 </html>
