--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@ excerpt_separator: Kitchener Massage Therapist,  Specializing in Deep Tissue Mas
 <div class="content-wrap notoppadding bottommargin nobottompadding hidden-lg hidden-md hidden-sm">
   <div class="container clearfix">
     <div class="heading-block title-center page-section nobottommargin topmargin toppadding">
+
+<!-- COVID Button-->
+      <div class="tab_buttons_small">
+        <a href="{{site.baseurl}}/generalmassagetherapy/covid-19" title="Schedule Massage Therapy Appointment Now" style="display: block" class="btn btn-danger fright">Covid-19 Update</a>
+    </div>
+<!-- End COvid -->
+
+
       <h1>Kitchener Massage Therapy</h1>
       <span>Specializing in Deep Tissue Massage and Trigger Point Release Therapy to bring you the relief you need from repetitive strain injuries and postural dysfunctions related to sports, the workplace, and family life.</span>
     </div>
