remove cmto logo and testimonials

--- a/_site_production/generalmassagetherapy/low-back-pain/index.html
+++ b/_site_production/generalmassagetherapy/low-back-pain/index.html
@@ -89,7 +89,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <li><a href="/"><div>Home</div></a></li>
     <li><a href="/about/index.html" title="Jeremy's bio and massage therapy background"><div>About</div></a>
       <ul>
-        <li><a href="/about/testimonials/index.html"><div>Testimonials</div></a></li>
         <li><a href="/about/rock-climbing-as-a-lifestyle/index.html"><div>Rock Climbing as a Lifestyle</div></a></li>
       </ul>
     </li>
@@ -244,9 +243,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <div class="clearfix"></div>
 
 <!-- CMTO Logo -->
-<div class="testimonial bottommargin-sm">
+<!-- <div class="testimonial bottommargin-sm">
 	<a href="https://www.cmto.com/" target="_blank" title="College of Massage Therapists of Ontario"><img alt="College of Massage Therapists of Ontario" class="attachment-200x105" style="max-width: 100%;" src="https://www.kwmassage.com/assets/images/cmto-logo.jpg"></a>
-</div>
+</div> -->
 
 <!-- RMTAO Logo --> 
 <!-- not a succure site - remove until  -->
