--- a/about/testimonials/index.html
+++ b/about/testimonials/index.html
@@ -1,24 +1,34 @@
 ---
-layout: page
+layout: redirect
 title: "Testimonials"
 category: about
 slug: testimonials
+redirect_url: /
 post_id: 277
 excerpt_separator: Testimonials for Jeremy at Kitchener Massage Therapy
 meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage therapist Kitchener , massage therapy Kitchener, Kitchener registered massage therapy, Kitchener registered massage therapist, registered massage therapist Kitchener , registered massage therapy Kitchener, Deep tissue massage, massage, sports massage, Kitchener sports massage, massage therapy, massage therapist, registered massage therapist, registered massage therapy, Testimonials, massage therapy testimonials
 ---
-<section id="content">
+<!-- The Testimonials on this page have been removed by the CMTO's orders -->
+<div class="testimonial">
+	<div class="testi-content">
+		<h3>The Testimonials on this page have been removed</h3>
 
-	<div class="content-wrap nobottompadding">
+		</div>
+	</div>
+</div>
+
+<!-- <section id="content">
+
+	<div class="content-wrap nobottompadding"> -->
 
 <!-- 		<div class="clearfix"> -->
 
 			<!-- Post Content
-			============================================= -->
+			============================================= 
 			<div class="postcontent nobottommargin clearfix">
 
-				<!-- Posts
-				============================================= -->
+		 Posts
+				============================================= 
 				<div id="posts" class="post-grid grid-2 clearfix">
 
 					<div class="entry clearfix" data-class-lg="" data-class-md="" data-class-sm="leftmargin-lg" data-class-xs="" data-class-xxs="">
@@ -49,11 +59,11 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 				
 				</div>
 			</div>
-		<!-- </div> -->
+		</div>
 	</div>
-</section>
+</section> -->
 
-
+<!-- 
 <div class="testimonial">
 	<div class="testi-content">
 		<p>I walked out of my first treatment with Jeremy impressed that he did exactly what I wanted him to do. <a title="What is Deep Tissue Massage?" href="{{site.url}}/generalmassagetherapy/what-is-deep-tissue-massage/index.html">Deep tissue massage</a> treatment is nothing like a relaxing day at a spa, but it is precisely what I need to stay active. I return to Jeremy often to remain limber, flexible, and mobile. A childhood bicycle collision injured my cervical spine. I have bone spurs on two of my neck vertebrae and that injury forever changed the way my spine works. Over the years, my body has learned to adapt by creating knots of painful, rigid tissues in my muscles, tendons, and ligaments. These knots limit my range of motion, reduce circulation, increase inflammation, and cause chronic pain. Years of chronic pain drove me from the things I love: hiking, long walks, swimming, aerobics, and my daily fitness routine. Chronic pain left me feeling defeated.Discovering deep tissue massage gives me hope. Jeremy's deep tissue massage breaks down my knots to restore normal movement. I won't lie - the treatment is painful, but the days and weeks of mobility are worth every minute. With Jeremy's deep tissue massage treatments, aftercare suggestions, and<a title="General Guidelines for Stretching" href="{{site.url}}/stretching/general-guidelines-for-stretching/index.html"> stretches</a>, I can enjoy fitness again and I feel empowered because chronic pain doesn't run my life anymore. I do.</p>
@@ -223,4 +233,4 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 			A Google User
 		</div>
 	</div>
-</div>
+</div> -->
