--- a/_site_production/index.html
+++ b/_site_production/index.html
@@ -89,7 +89,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <li><a href="https://www.kwmassage.com/index.html"><div>Home</div></a></li>
     <li><a href="https://www.kwmassage.com/about/index.html" title="Jeremy's bio and massage therapy background"><div>About</div></a>
       <ul>
-        <li><a href="https://www.kwmassage.com/about/testimonials/index.html"><div>Testimonials</div></a></li>
         <li><a href="https://www.kwmassage.com/about/rock-climbing-as-a-lifestyle/index.html"><div>Rock Climbing as a Lifestyle</div></a></li>
       </ul>
     </li>
@@ -342,80 +341,65 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <!-- Testimonials -->
 <div class="row">
-   <!-- Testamonials -->
+   <!-- Testamonials --> 
 <div id="testi_parallax" class="section parallax nomargin notopborder" style="background-color: white;" data-stellar-background-ratio="0.3" data-class-lg="" data-class-md="" data-class-sm="" data-class-xs="" data-class-xxs="nopadding">
-  <div class="container clearfix">
-    <!-- Row 1 -->
-    <div class="row">
-
-      <div class="col-md-6 bottommargin" data-class-lg="" data-class-md="" data-class-sm="" data-class-xs="" data-class-xxs="nopadding">
-        <div class="testimonial center">
-          <div class="testi-content before_and_after_none">
-            <p>
-              <a href="https://www.youtube.com/watch?v=oKya2ymtKYc" data-lightbox="iframe">
-                <img src="https://img.youtube.com/vi/oKya2ymtKYc/1.jpg" alt="Massage Therapist Testimonial, Kyle">
-              </a>
-            </p>
-            <div class="testi-meta">
-              Kyle
-              <span>Web Develomment/Martial Artist</span>
+    <div class="container clearfix">
+        <!-- Row 1 -->
+<!--         <div class="row"> -->
+            <div class="col-md-6 bottommargin" data-class-lg="" data-class-md="" data-class-sm="" data-class-xs="" data-class-xxs="nopadding">
+                <div class="testimonial center">
+                    <div class="testi-content before_and_after_none">
+                        <p>
+                            <a href="/generalmassagetherapy/covid-19">
+                                <h1>Covid-19</h1>
+                            </a>
+                        </p>
+                        <div class="testi-meta">
+                            Information and Notices
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-6 bottommargin" data-class-lg="" data-class-md="" data-class-sm="" data-class-xs="" data-class-xxs="nopadding">
-        <div class="testimonial center">
-          <div class="testi-content before_and_after_none">
-            <p>
-              <a href="https://www.youtube.com/watch?v=RC_Ao0gda3k" data-lightbox="iframe">
-                <img src="https://img.youtube.com/vi/RC_Ao0gda3k/1.jpg" alt="Massage Therapist Testimonial, Josh">
-              </a>
-            </p>
-            <div class="testi-meta">
-              Josh
-              <span>Rock Climber and Small Business Owner</span>
+            <!-- <div class="col-md-6 bottommargin" data-class-lg="" data-class-md="" data-class-sm="" data-class-xs="" data-class-xxs="nopadding">
+                <div class="testimonial center">
+                    <div class="testi-content before_and_after_none">
+                        <p>
+                            <h2>Black Lives Matter</h2>
+                        </p>
+                    </div>
+                </div>
+            </div> -->
+<!--         </div> -->
+        <!-- Row 1 -->
+        <!-- Row 2 -->
+        <!-- <div class="row hidden-sm hidden-xs hidden-xxs">
+            <div class="col-md-6 bottommargin">
+                <div class="testimonial">
+                    <div class="testi-content">
+                        <p>I walked out of my first treatment with Jeremy impressed that he did exactly what I wanted him to do. Deep tissue massage treatment is nothing like a relaxing day at a spa, but it is precisely what I need... <a title="Read more KWmassage Testimonials" href="/about/testimonials/index.html">Read more</a></p>
+                        <div class="testi-meta">
+                            Carrie
+                            <span>Technical Writer</span>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-      </div>
-
+            <div class="col-md-6 bottommargin">
+                <div class="testimonial">
+                    <div class="testi-content">
+                        <p>As a professional football player, taking care of my body is my number one priority and Jeremy has helped me to not only rehab from injuries but also keep me ready to perform at the highest level all season long.</p>
+                        <div class="testi-meta">
+                            Andrew
+                            <span>Professional Football Player</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> -->
+        <!-- Row 2 end -->
     </div>
-    <!-- Row 1 -->
-
-    <!-- Row 2 -->
-    <div class="row hidden-sm hidden-xs hidden-xxs">
-
-      <div class="col-md-6 bottommargin">
-        <div class="testimonial">
-          <div class="testi-content">
-            <p>I walked out of my first treatment with Jeremy impressed that he did exactly what I wanted him to do. Deep tissue massage treatment is nothing like a relaxing day at a spa, but it is precisely what I need... <a title="Read more KWmassage Testimonials" href="/about/testimonials/index.html">Read more</a></p>
-            <div class="testi-meta">
-              Carrie
-              <span>Technical Writer</span>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-6 bottommargin">
-        <div class="testimonial">
-          <div class="testi-content">
-            <p>As a professional football player, taking care of my body is my number one priority and Jeremy has helped me to not only rehab from injuries but also keep me ready to perform at the highest level all season long.</p>
-            <div class="testi-meta">
-              Andrew
-              <span>Professional Football Player</span>
-            </div>
-          </div>
-        </div>
-      </div>
-
-    </div>
-    <!-- Row 2 end -->
-  
-  </div>
 </div>
-<!-- Testimonials end-->
+<!-- Testimonials end
 </div>
 <!-- End Testimonials -->
 
