--- a/_site_production/clinic-information/index.html
+++ b/_site_production/clinic-information/index.html
@@ -148,8 +148,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <div class="entry clearfix">
                 <div class="entry-content notopmargin">
 
-                  <iframe src="https://kwmassage.cliniko.com/bookings?embedded=true" frameborder="0" scrolling="auto" width="100%" height="750px"></iframe>
-	<div class="leftmargin">
+                  <h4>Notice:</h4>
+<p>For the next short while, KWmassage will not be excepting new clients.</p>
+<p>I have been working with another RMT named Stephen Downey, doing treatment exchanges so that he will be familiar with my style of treatment. Stephen is very good and very strong, I suggest that you continue treatment with him for the time being. </p>
+<p>Stephen works at <a href="http://perfectbalancewc.ca/">Perfect Balance Wellness</a>, you can connect with him at <strong>519.804.1697</strong>(office) or <strong>647.968.1973</strong>(cell).</p>
+
+
+<iframe src="https://kwmassage.cliniko.com/bookings?embedded=true" frameborder="0" scrolling="auto" width="100%" height="750px"></iframe>
+<div class="leftmargin">
   	<p><b>Please Note:</b>
 	<ul class="blue">
 		<li>an appointment is required in advance</li>
