--- a/clinic-information/index.html
+++ b/clinic-information/index.html
@@ -6,8 +6,14 @@ post_id: 7
 excerpt_separator: Book your Massage Therapy appointment online with a Kitchener massage therapist.
 meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage therapist Kitchener , massage therapy Kitchener, Kitchener registered massage therapy, Kitchener registered massage therapist, registered massage therapist Kitchener , registered massage therapy Kitchener, Deep tissue massage, massage, sports massage, Kitchener sports massage, massage therapy, massage therapist, registered massage therapist, registered massage therapy, Massage appointment, massage therapy appointment, registered massage therapy appointment, book online
 ---
+<h4>Notice:</h4>
+<p>For the next short while, KWmassage will not be excepting new clients.</p>
+<p>I have been working with another RMT named Stephen Downey, doing treatment exchanges so that he will be familiar with my style of treatment. Stephen is very good and very strong, I suggest that you continue treatment with him for the time being. </p>
+<p>Stephen works at <a href="http://perfectbalancewc.ca/">Perfect Balance Wellness</a>, you can connect with him at <strong>519.804.1697</strong>(office) or <strong>647.968.1973</strong>(cell).</p>
+
+
 <iframe src="https://kwmassage.cliniko.com/bookings?embedded=true" frameborder="0" scrolling="auto" width="100%" height="750px"></iframe>
-	<div class="leftmargin">
+<div class="leftmargin">
   	<p><b>Please Note:</b>
 	<ul class="blue">
 		<li>an appointment is required in advance</li>
