--- a/contact/index.html
+++ b/contact/index.html
@@ -6,16 +6,23 @@ post_id: 21
 meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage therapist Kitchener , massage therapy Kitchener, Kitchener registered massage therapy, Kitchener registered massage therapist, registered massage therapist Kitchener, registered massage therapy Kitchener, Deep tissue massage, massage, sports massage, Kitchener sports massage, massage therapy, massage therapist, registered massage therapist, registered massage therapy, 
 excerpt_separator: The quickest way to book an appointment with me is to book a treatment online or get in touch with me directly to make a massage therapy appointment.
 ---
-<p>The quickest way to book an appointment with me is to <a href="{{site.url}}/clinic-information/index.html">book a treatment online</a>.</p>
+<h4>Notice:</h4>
+<p>For the next short while, KWmassage will not be excepting new clients.</p>
+<p>I have been working with another RMT named Stephen Downey, doing treatment exchanges so that he will be familiar with my style of treatment. Stephen is very good and very strong, I suggest that you continue treatment with him for the time being. </p>
+<p>Stephen works at <a href="http://perfectbalancewc.ca/">Perfect Balance Wellness</a>, you can connect with him at <strong>519.804.1697</strong>(office) or <strong>647.968.1973</strong>(cell).</p>
+
+
+
+<!-- <p>The quickest way to book an appointment with me is to <a href="{{site.url}}/clinic-information/index.html">book a treatment online</a>.</p>
 
 <p>To get in touch with me directly to make a <a title="Book Massage Therapy Appointment Online" href="{{site.url}}/clinic-information/index.html">massage therapy appointment </a>in Kitchener/Waterloo, you can call me, send me an email or text message. You can also use the Contact Form below to send me a message.</p>
 
 <p><b>351 Carson Drive<br />
 Kitchener, ON<br />
-(519) 745-4112<br />
-<a href="mailto:Jeremy@kwmassage.com">Jeremy@kwmassage.com</a></b></p>
+(519) 745-4112<br /> -->
+<!-- <a href="mailto:Jeremy@kwmassage.com">Jeremy@kwmassage.com</a></b></p> -->
 
-<section id="google-map" class="gmap" style="height: 410px;"></section>
+<!-- <section id="google-map" class="gmap" style="height: 410px;"></section>
 
 						<script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyDTKED2vgiMntr2xru-0VOHVMgYxGvzrB8"></script>
 						<script type="text/javascript" src="{{site.url}}/js/jquery.gmap.js"></script>
@@ -48,4 +55,4 @@ Kitchener, ON<br />
 
 							});
 
-						</script>
+						</script> -->
